# orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
.claude/tools/: hook_logger.py  hook_post_investigation.py  hook_post_triage.py
docs/: adding_workflows.md  architecture.md  hooks_and_skills.md  setup.md  workflows.md
src/orchestrator/: __init__.py  citation_tracker.py  cli.py  config.py  file_writer.py  investigation.py  learning_store.py  linear_client.py  linear_history.py  models.py  triage.py  utils.py
tests/: conftest.py  test_citation_tracker.py  test_config.py  test_file_writer.py  test_hooks.py  test_investigation.py  test_learning_store.py  test_linear_client.py  test_linear_history.py  test_models.py  test_triage.py  test_utils.py
triage_results/: ABC-222.md  ABC-333.md
