[project]
name = "orchestrator"
version = "0.1.0"
description = "AI-powered orchestrator for tactical product development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "rzp-labs"}
]

dependencies = [
    "click>=8.2.1",              # CLI framework
    "pydantic>=2.11.7",          # Data validation
    "pydantic-settings>=2.10.1", # Settings management
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.1.1",         # Coverage reporting
    "pytest-mock>=3.14.0",       # Mocking utilities
    "pyright>=1.1.406",          # Type checking
    "ruff>=0.11.10",             # Linting/formatting
]

[project.scripts]
orchestrator = "orchestrator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"tests/**/*.py" = ["E501", "SIM"]  # Relax rules in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
